# SkillHub-python

./: .gitignore  README.md
backend/: .env.example  .env.release.example  .gitignore  Dockerfile  HANDOFF.md  Makefile  README.md  alembic.ini  compose.release.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 20260506_0001_initial_schema_v40.py
backend/scripts/: export_openapi.py  rebuild_search_index.py  schema_diff.py
backend/src/skillhub_api/: __init__.py  api_envelope.py  deps.py  errors.py  logging.py  logging_sanitizer.py  main.py  settings.py
backend/src/skillhub_api/domain/: auth.py  events.py  notifications.py  skill.py
backend/src/skillhub_api/events/: __init__.py  bus.py  middleware.py
backend/src/skillhub_api/events/listeners/: __init__.py  audit.py  notifications.py  search_index.py  social.py
backend/src/skillhub_api/infra/: redis_client.py  scanner.py
backend/src/skillhub_api/infra/db/: __init__.py  base.py  session.py
backend/src/skillhub_api/infra/repositories/: governance.py  idempotency.py  label.py  notification.py  password_reset.py  role.py  skill.py  social.py  token.py  user.py
backend/src/skillhub_api/routers/: health.py
backend/src/skillhub_api/scheduling/: __init__.py  jobs.py
backend/src/skillhub_api/schemas/: admin.py  auth.py  base.py  governance.py  notifications.py  search.py  skill.py  social.py
backend/src/skillhub_api/search/: document.py  embedding.py  index.py  java_hash.py  query.py  rebuild.py  tokenizer.py
backend/src/skillhub_api/services/: labels.py
backend/src/skillhub_api/sse/: __init__.py  manager.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_local.py  test_auth_tokens.py  test_governance.py  test_rbac.py  test_schema.py  test_search.py  test_skills_publish.py  test_social_notifications.py
backend/tests/unit/: test_auth_schemas.py  test_embedding.py  test_errors.py  test_event_bus.py  test_governance_routes.py  test_health.py  test_java_hash.py  test_manifest.py  test_openapi_routes.py  test_package.py  test_passwords.py  test_phase7_routes.py  test_phase8.py  test_scanner_client.py  test_search_routes.py  test_settings.py  test_skill_policy.py  test_skill_routes.py  test_social_routes.py  test_sse_manager.py  test_storage_local.py  test_tokenizer.py  test_tokens.py
(+123 files in other folders)
