[project]
name = "skillhub-api"
version = "0.1.0"
description = "SkillHub backend (Python rewrite of Java Spring Boot service)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "authlib>=1.3",
    "httpx>=0.28",
    "aioboto3>=13.2",
    "aiosmtplib>=3.0",
    "passlib[bcrypt]>=1.7",
    "jieba>=0.42.1",
    "sse-starlette>=2.1",
    "apscheduler>=3.10",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "orjson>=3.10",
    "structlog>=24.4",
    "bcrypt<5",
    "pyyaml>=6.0",
]

[dependency-groups]
# uv-native dev group — installed by `uv sync` (default includes it).
# Run `uv sync --no-dev` for a production-only install.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres,redis,minio]>=4.8",
    "schemathesis>=3.39",
    "ruff>=0.8",
    "mypy>=1.13",
    "deepdiff>=8.0",
    "freezegun>=1.5",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillhub_api"]

[tool.uv]
# Pin the project's Python version; uv will create the venv with it.
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "N"]
ignore = [
    "E501",
    "B008",  # FastAPI idiom — `param: T = Depends(...)` in route signatures.
]

[tool.ruff.lint.isort]
known-first-party = ["skillhub_api"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["skillhub_api"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["jieba.*", "aioboto3.*", "authlib.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires testcontainers (postgres/redis/minio)",
    "contract: schema parity / openapi-diff tests",
]
